--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js"
   },
   "dependencies": {
-    "fastify": "5.0.0",
-    "fastify-plugin": "5.0.0",
     "@fastify/autoload": "6.0.0",
     "@fastify/sensible": "6.0.0",
-    "fastify-cli": "7.3.0"
+    "@fastify/type-provider-typebox": "5.1.0",
+    "fastify": "5.0.0",
+    "fastify-cli": "7.3.0",
+    "fastify-plugin": "5.0.0"
   },
   "devDependencies": {
     "@types/node": "22.1.0",
