--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
     "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
-    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js"
+    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
     "@fastify/autoload": "6.0.0",
@@ -25,9 +28,10 @@
   "devDependencies": {
     "@types/node": "22.1.0",
     "c8": "10.1.2",
-    "ts-node": "10.4.0",
     "concurrently": "9.0.0",
     "fastify-tsconfig": "2.0.0",
+    "prisma": "^6.5.0",
+    "ts-node": "10.4.0",
     "typescript": "5.6.3"
   },
   "author": "Saikat Sardar",
