--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fastify/autoload": "6.0.0",
     "@fastify/sensible": "6.0.0",
     "@fastify/type-provider-typebox": "5.1.0",
+    "@prisma/client": "^6.5.0",
     "fastify": "5.0.0",
     "fastify-cli": "7.3.0",
     "fastify-plugin": "5.0.0"
