--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@fastify/autoload": "6.0.0",
     "@fastify/cors": "^11.0.0",
+    "@fastify/etag": "^6.0.3",
     "@fastify/sensible": "6.0.0",
     "@fastify/type-provider-typebox": "5.1.0",
     "@prisma/client": "^6.5.0",
