--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.0",
     "@fastify/etag": "^6.0.3",
+    "@fastify/jwt": "^9.1.0",
     "@fastify/sensible": "6.0.0",
     "@fastify/type-provider-typebox": "5.1.0",
     "@prisma/client": "^6.5.0",
