--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "0.1.0",
   "description": "This project was bootstrapped with Fastify-CLI.",
   "main": "app.ts",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "npm run build:ts && tsc -p test/tsconfig.json && c8 node --test -r ts-node/register \"test/**/*.ts\"",
     "start": "npm run build:ts && fastify start -l info dist/app.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
@@ -19,15 +15,15 @@
   },
   "dependencies": {
     "@fastify/autoload": "6.0.0",
-    "@fastify/compress": "^8.0.1",
-    "@fastify/cookie": "^11.0.2",
-    "@fastify/cors": "^11.0.0",
-    "@fastify/etag": "^6.0.3",
-    "@fastify/jwt": "^9.1.0",
+    "@fastify/compress": "8.0.1",
+    "@fastify/cookie": "11.0.2",
+    "@fastify/cors": "11.0.0",
+    "@fastify/etag": "6.0.3",
+    "@fastify/jwt": "9.1.0",
     "@fastify/sensible": "6.0.0",
     "@fastify/type-provider-typebox": "5.1.0",
-    "@prisma/client": "^6.5.0",
-    "argon2": "^0.41.1",
+    "@prisma/client": "6.5.0",
+    "argon2": "0.41.1",
     "fastify": "5.0.0",
     "fastify-cli": "7.3.0",
     "fastify-plugin": "5.0.0"
@@ -37,7 +33,7 @@
     "c8": "10.1.2",
     "concurrently": "9.0.0",
     "fastify-tsconfig": "2.0.0",
-    "prisma": "^6.5.0",
+    "prisma": "6.5.0",
     "ts-node": "10.4.0",
     "typescript": "5.8.2"
   },
