--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "This project was bootstrapped with Fastify-CLI.",
   "main": "app.ts",
+  "type": "module",
   "scripts": {
     "start": "npm run build:ts && fastify start -l info dist/app.js",
     "build:ts": "tsc",
@@ -20,13 +21,16 @@
     "@fastify/cors": "11.0.1",
     "@fastify/etag": "6.0.3",
     "@fastify/jwt": "9.1.0",
+    "@fastify/multipart": "9.0.3",
     "@fastify/sensible": "6.0.3",
     "@fastify/type-provider-typebox": "5.1.0",
     "@prisma/client": "6.5.0",
     "argon2": "0.41.1",
     "fastify": "5.2.2",
     "fastify-cli": "7.4.0",
-    "fastify-plugin": "5.0.1"
+    "fastify-plugin": "5.0.1",
+    "file-type": "20.4.1",
+    "nanoid": "5.1.5"
   },
   "devDependencies": {
     "@types/node": "22.14.0",
