--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fastify/jwt": "9.1.0",
     "@fastify/multipart": "9.0.3",
     "@fastify/sensible": "6.0.3",
+    "@fastify/static": "^8.1.1",
     "@fastify/type-provider-typebox": "5.1.0",
     "@prisma/client": "6.5.0",
     "argon2": "0.41.1",
